--- a/public/style.css
+++ b/public/style.css
@@ -1,119 +1,5 @@
-/*html, body and all*/
-html, body {
-    max-width: 100%;
-    height: auto;
-    padding: 0;
-    margin: 0;
-}
-
-body {
-    background-color: black;
-    color: white;
-    font-size: 16px;
-}
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-/*Mobile Phones*/
-[class*="col-"] {
-    width: 100%;
-}
-
-/*Tablets*/
-@media only screen and (min-width: 600px) {
-    .col-m-1 {width: 8.33%;}
-    .col-m-2 {width: 16.66%;}
-    .col-m-3 {width: 25%;}
-    .col-m-4 {width: 33.33%;}
-    .col-m-5 {width: 41.66%;}
-    .col-m-6 {width: 50%;}
-    .col-m-7 {width: 58.33%;}
-    .col-m-8 {width: 66.66%;}
-    .col-m-9 {width: 75%;}
-    .col-m-10 {width: 83.33%;}
-    .col-m-11 {width: 91.66%;}
-    .col-m-12 {width: 100%;}
-}
-
-/*Desktops*/
-@media only screen and (min-width: 768px) {
-    .col-1 {width: 8.33%;}
-    .col-2 {width: 16.66%;}
-    .col-3 {width: 25%;}
-    .col-4 {width: 33.33%;}
-    .col-5 {width: 41.66%;}
-    .col-6 {width: 50%;}
-    .col-7 {width: 58.33%;}
-    .col-8 {width: 66.66%;}
-    .col-9 {width: 75%;}
-    .col-10 {width: 83.33%;}
-    .col-11 {width: 91.66%;}
-    .col-12 {width: 100%;}
-}
-
-/*Common for Mobile Phones, Tablets and Desktops*/
-[class*="col-"] {
-    float: left;
-}
-
-.row::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-
-/*Title*/
-h2 {
-    font-size: 2em;
-    margin-left: 4%;
-    margin-top: 18%;
-}
-
-/*Navigation*/
-#navigationList {
-    height: 22%;
-    position: fixed;
-    top: 0;
-    color: black;
-    background-color: white;
-}
-
-#navigationList li {
-    margin-left: 2%;
-    float: left;
-    list-style-type: none;
-    padding-top: 13%;
-}
-
-#navigationList li:first-child {
-    margin-left: 5%;
-}
-
-/*PageContent*/
-/*form and input*/
-#pageContent form {
-    min-width: 22%;
-    width: 24%;
-    margin-left: 2%;
-}
-
-#pageContent input {
-    float: right;
-    margin-left: 0.5%;
-}
-
-/*frmUser and frmGameHosting*/
-#btnLogout, #btnGameExit, #btnGameStart, #frmGameHosting {
+#btnLogout, #btnGameExit, #btnGameStart, #game, #frmGamePlay, #playArea {
     visibility: hidden;
-}
-
-#frmGameHosting #rdoCreate, #frmGameHosting #rdoJoin { /* The extra tags ensure txtGameId overrides property float */
-    float: left;
-    margin-right: 0.5%;
 }
 
 /*ChatRoom*/
