Adds list of connected users at footer. Revert back to this version if adding functions does not work.

--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,5 @@
+/*Created by Yehya Eldeeb*/
+
 #btnLogout, #btnGameExit, #btnGameStart, #game, #frmGamePlay, #playArea {
     visibility: hidden;
 }
