--- a/public/style.css
+++ b/public/style.css
@@ -58,7 +58,7 @@
 
 .btn {
     text-align: center;
-    margin-left: 4%;
+    margin-right: 4%;
     background-color: #000;
     color: #fff;
     padding-top: 2%;
